# pendulum-ruvector

./: .gitmodules  LICENSE  README.md
.github/workflows/: deploy.yml
docs/plans/: evolutionary-swingup.md  learning-roadmap.md  web-experience.md
multi_link_pendulum/: .gitignore  README.md  pyproject.toml  requirements.txt
multi_link_pendulum/configs/: default.yaml
multi_link_pendulum/examples/: __init__.py  collect_calibration_data.py  render_gif.py  run_visual_demo.py  simple_calibration_experiment.py
multi_link_pendulum/pendulum_sim/: __init__.py  data_logger.py  noise.py  simulator.py  visualization.py
pendulum_rs/: .gitignore  Cargo.toml  README.md  render_from_csv.py
pendulum_rs/src/: control.rs  estimator.rs  learn.rs  lib.rs  main.rs  memory.rs  mpc.rs  simulator.rs
pendulum_rs/tests/: energy.rs  phase2_recognition.rs  policy_library.rs  policy_store.rs  population.rs  recall_consumer.rs
pendulum_web/: .gitignore  Cargo.toml
pendulum_web/src/: lib.rs
pendulum_web/tests/: duel.rs  population.rs  recognize.rs  recover.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: popWorker.ts  render.ts
web/src/stations/: Crowd.svelte  Discover.svelte  Duel.svelte  Predict.svelte  Recognize.svelte  Recover.svelte  Toy.svelte
web/src/wasm/: README.txt  pendulum_web.d.ts  pendulum_web.js  pendulum_web_bg.wasm  pendulum_web_bg.wasm.d.ts
