[project]
name = "multi-link-pendulum"
version = "0.1.0"
description = "Configurable n-link pendulum simulation testbed for RuVector calibration experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "rerun-sdk>=0.18",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# `uv pip install -e '.[data]'` for optional dataframe tooling.
data = ["pandas>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pendulum_sim"]
