[package]
name = "pendulum_web"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings: in-browser pendulum physics + in-memory RuVector. The whole brain runs client-side."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

# The shared physics/control/learning core, with Rerun (native-only) and every
# other feature-gated bit OFF — this is what makes the lib wasm-buildable.
pendulum_rs = { path = "../pendulum_rs", default-features = false, features = ["vectordb"] }

# RuVector's vector DB, in-memory only: no `storage` (file/redb/memmap2), no
# `hnsw` (mmap), no `parallel` (rayon) — leaving MemoryStorage + FlatIndex, which
# is exact at our tiny vector counts. This is genuinely RuVector, in the tab.
ruvector-core = { path = "../RuVector/crates/ruvector-core", default-features = false, features = ["memory-only"] }

serde_json = "1"

# getrandom is pulled in transitively; on wasm32 it needs its browser backend.
getrandom = { version = "0.2", features = ["js"] }

# Surfaces Rust panics in the browser console during development.
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

# Small, fast wasm: optimize for size, link-time-optimize, single codegen unit.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
